remove drag n drop constraint, prevent dragging from scrolling out of view

--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,9 @@ html{
 body
 {
 	overflow: hidden;
+	position:fixed;
 	height: 100%;
+	width:100%;
 	margin: 0;
     vertical-align:middle;
 	font-weight: 100;
